<resources>
    <string name="app_name">Unlibrary</string>
    <string name="auth_background_content_description">Man reading book</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="login_button">Login</string>
    <string name="cancel_button">Cancel</string>
    <string name="register_button">Register</string>
    <string name="create_account_button">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="library_nav">Library</string>
    <string name="unlibrary_nav">Unlibrary</string>
    <string name="exchange_nav">Exchange</string>
    <string name="profile_nav">Profile</string>
    <string name="card_view_image_description">Holds image of card</string>
    <string name="logout">Logout</string>
    <string name="enter_password_to_confirm_changes">Password</string>
    <string name="password_confirmation_dialog_title">Enter Password to confirm changes</string>
    <string name="fab_add_book_description">Add book</string>
...
